--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon src/server.ts",
+    "build": "tsc",
+    "migrate:up": "ts-node src/migrations/index.ts",
+    "migrate:down": "ts-node src/migrations/index.ts rollback"
   },
   "keywords": [],
   "author": "",
