--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon src/server.ts",
     "build": "tsc",
     "migrate:up": "ts-node src/migrations/index.ts",
-    "migrate:down": "ts-node src/migrations/index.ts rollback"
+    "migrate:down": "ts-node src/migrations/index.ts rollback",
+    "migrate:prod": "node dist/migrations/index.js"
   },
   "keywords": [],
   "author": "",
