--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,5 +1,26 @@
 version: "3.9"
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    depends_on:
+      postgres:
+        condition: service_healthy
+    environment:
+      NODE_ENV: production 
+      DB_USER: your_user
+      DB_PASSWORD: your_password
+      DB_HOST: postgres
+      DB_NAME: your_database
+      DB_PORT: 5432
+    command: >
+      sh -c "
+      npm run migrate:prod &&
+      node dist/server.js"
+
   postgres:
     image: postgres:latest
     container_name: my-postgres-db
