--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -44,6 +44,7 @@ services:
       - "traefik.http.routers.app.rule=Host(`th-api.ebsycloud.com`)"
       - "traefik.http.routers.app.entrypoints=websecure"
       - "traefik.http.routers.app.tls.certresolver=myresolver"
+      - "traefik.http.services.app.loadbalancer.server.port=3000"
     command: >
       sh -c "
       npm run migrate:prod &&
