--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,25 +1,34 @@
 version: "3.9"
 services:
-  traefik:
-    image: traefik:v2.10
-    container_name: traefik
-    restart: always
-    command:
-      - "--api.insecure=true" # Enable Traefik dashboard (disable or secure in production)
-      - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false"
-      - "--entrypoints.web.address=:80"
-      - "--entrypoints.websecure.address=:443"
-      - "--certificatesresolvers.myresolver.acme.tlschallenge=true"
-      - "--certificatesresolvers.myresolver.acme.email=ahmed@thevamgroup.com"
-      - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
+  nginx:
+    image: nginx:latest
     ports:
       - "80:80"
       - "443:443"
-      - "8080:8080" # Traefik dashboard
     volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - "./letsencrypt:/letsencrypt" # Persistent storage for certificates
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./certbot/www:/var/www/certbot # For Let's Encrypt challenge
+      - ./certbot/conf:/etc/letsencrypt # Certbot certificates
+    networks:
+      - th_app_network
+
+  docker-gen:
+    image: jwilder/docker-gen
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ./nginx/templates/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl
+      - ./nginx/conf.d:/etc/nginx/conf.d
+    command: -notify "nginx -s reload" /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+    networks:
+      - th_app_network
+
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./certbot/www:/var/www/certbot # For Let's Encrypt challenge
+      - ./certbot/conf:/etc/letsencrypt # Persistent storage for certificates
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do sleep 30h & wait $${!}; certbot renew; nginx -s reload; done'"
     networks:
       - th_app_network
 
@@ -40,11 +49,9 @@ services:
       DB_NAME: ${DB_NAME}
       DB_PORT: ${DB_PORT}
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.app.rule=Host(`th-api.ebsycloud.com`)"
-      - "traefik.http.routers.app.entrypoints=websecure"
-      - "traefik.http.routers.app.tls.certresolver=myresolver"
-      - "traefik.http.services.app.loadbalancer.server.port=3000"
+      - service=api
+      - domain=th-api.ebsycloud.com
+      - port=3000
     command: >
       sh -c "
       npm run migrate:prod &&
