--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,4 @@
-user nginx;
-worker_processes auto;
-
-error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
-
-events {
-    worker_connections 1024;
-}
+events {}
 
 http {
     include /etc/nginx/mime.types;
@@ -17,10 +9,11 @@ http {
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log /var/log/nginx/access.log main;
+    error_log /var/log/nginx/error.log warn;
 
     sendfile on;
     keepalive_timeout 65;
 
-    # Include dynamically generated configurations
+    # Include all configuration files in conf.d
     include /etc/nginx/conf.d/*.conf;
 }
