--- a/nginx/conf.d/th-api-ebsycloud.conf
+++ b/nginx/conf.d/th-api-ebsycloud.conf
@@ -9,4 +9,10 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
+    # Location block for handling Let's Encrypt ACME challenges
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot; # Root directory for Certbot challenges
+    }
+
 }
