--- a/nginx/conf.d/th-api-ebsycloud.conf
+++ b/nginx/conf.d/th-api-ebsycloud.conf
@@ -2,17 +2,27 @@ server {
     listen 80;
     server_name th-api.ebsycloud.com;
 
-    # Reverse proxy to the app
+    # Redirect HTTP to HTTPS
     location / {
-        proxy_pass http://app:3000; # Proxy to the app service
+        return 301 https://$host$request_uri;
+    }
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name th-api.ebsycloud.com;
+
+    ssl_certificate /etc/letsencrypt/live/th-api.ebsycloud.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/th-api.ebsycloud.com/privkey.pem;
+
+    location / {
+        proxy_pass http://app:3000; # Proxy to your app service
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
-
-    # Location block for handling Let's Encrypt ACME challenges
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot; # Root directory for Certbot challenges
-    }
-
 }
