--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -13,8 +13,8 @@ services:
       - "443:443"
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
-      - ./caddy_data:/data
-      - ./caddy_config:/config
+      - ./docker_data/caddy_data:/data
+      - ./docker_data/caddy_config:/config
     depends_on:
       - api_server
 
