update domain name

--- a/Caddyfile
+++ b/Caddyfile
@@ -21,3 +21,15 @@ api-dev.app.thrivehub.ai {
         on_demand
     }
 }
+
+api.thrivehub.ai {
+    reverse_proxy th_ssr_app:3000
+    encode gzip
+    log {
+        output stdout
+        format json
+    }
+    tls {
+        on_demand
+    }
+}
