--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -62,16 +62,15 @@ services:
     networks:
       - th_app_network
 
-  th_ssr_app:
-    container_name: th_ssr_app
-    build:
-      context: web_app_th_ssr_app
-    environment:
-      NODE_ENV: production
-    ports:
-      - "4000:8000"
-    networks:
-      - th_app_network
+  # th_ssr_app:
+  #   container_name: th_ssr_app
+  #   image: web_app_th_ssr_app
+  #   environment:
+  #     NODE_ENV: production
+  #   ports:
+  #     - "4000:8000"
+  #   networks:
+  #     - th_app_network
 
 networks:
   th_app_network:
