fix: profile tests

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "test": "jest",
-    "test:only": "jest ./tests/e2e/businessprofiles.e2e.test.ts",
+    "test:only": "jest ./tests/e2e/profiles.e2e.test.ts",
     "build": "tsc",
     "migrate:up": "ts-node src/migrations/index.ts",
     "migrate:down": "ts-node src/migrations/index.ts rollback",
