--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-rate-limit": "^7.4.1",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "mailgun-js": "^0.22.0",
     "multer": "^1.4.5-lts.1",
     "openapi-types": "^12.1.3",
     "pg": "^8.13.1",
@@ -40,6 +41,7 @@
     "@types/express-validator": "^3.0.2",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/mailgun-js": "^0.22.18",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.9.0",
     "@types/pg": "^8.11.10",
