--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.5-lts.1",
     "openapi-types": "^12.1.3",
     "pg": "^8.13.1",
+    "stripe": "^17.5.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.3"
@@ -45,6 +46,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.9.0",
     "@types/pg": "^8.11.10",
+    "@types/stripe": "^8.0.417",
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.7",
