fix biz data return test

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon src/server.ts",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "test:only": "jest ./tests/e2e/reviews.e2e.test.ts",
+    "test:only": "jest ./tests/e2e/admin-business-profiles.e2e.test.ts",
     "build": "tsc",
     "migrate:up": "ts-node src/migrations/index.ts",
     "migrate:down": "ts-node src/migrations/index.ts rollback",
