udpates to docker prod

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -5,10 +5,58 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: th_api
     ports:
       - "3000:3000"
     depends_on:
       postgres:
+        condition: service_healthy
+    environment:
+      NODE_ENV: ${NODE_ENV}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_HOST: ${DB_HOST}
+      DB_NAME: ${DB_NAME}
+      DB_PORT: ${DB_PORT}
+    labels:
+      - service=api
+      - domain=thrivehub.ai
+      - port=3000
+    command: >
+      sh -c "
+      npm run migrate:prod && npm run seed &&
+      node dist/server.js"
+    networks:
+      - th_app_shared_network
+
+  postgres:
+    image: postgres:latest
+    container_name: th_db_pg
+    environment:
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
+    ports:
+      - "6432:5432"
+    volumes:
+      - ./docker_data/pg_data_31:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U your_user -h localhost || exit 1"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    networks:
+      - th_app_shared_network
+  
+  dev_api_server:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: dev_th_api
+    ports:
+      - "8080:3000"
+    depends_on:
+      dev_postgres:
         condition: service_healthy
     environment:
       NODE_ENV: ${NODE_ENV}
@@ -26,17 +74,17 @@ services:
       npm run migrate:prod && npm run seed &&
       node dist/server.js"
     networks:
-      - th_app_shared_network
+      - dev_th_app_shared_network
 
-  postgres:
+  dev_postgres:
     image: postgres:latest
-    container_name: my-postgres-db
+    container_name: dev_th_db_pg
     environment:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
     ports:
-      - "6432:5432"
+      - "8432:5432"
     volumes:
       - ./docker_data/pg_data_31:/var/lib/postgresql/data
     healthcheck:
@@ -45,8 +93,10 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - th_app_shared_network
+      - dev_th_app_shared_network
 
 networks:
   th_app_shared_network:
+    external: true
+  dev_th_app_shared_network:
     external: true
